maze.lessons.maze.island.IslandMaze.scala.error
Escaper:9: error: value North is not a member of object plm.universe.Direction
        setDirection(Direction.North)
                               ^